--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-navigation/native": "^6.1.17",
+    "@types/react": "~18.2.45",
     "expo": "^50.0.14",
     "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
     "expo-updates": "~0.24.12",
-    "react-native-web": "~0.19.6",
+    "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.3",
-    "typescript": "^5.3.0",
-    "@types/react": "~18.2.45"
+    "react-native": "0.73.6",
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
