--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/native": "^6.1.17",
     "@types/react": "~18.2.45",
     "expo": "^50.0.14",
@@ -18,6 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-paper": "^5.12.3",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "typescript": "^5.3.0"
   },
